--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,26 @@
 {
+	"name": "umomega/foundation",
+	"description": "Foundation for umΩ Apps",
+	"keywords": ["umomega", "laravel", "foundation", "php"],
+	"version": "1.0.0",
+	"license": "MIT",
+	"authors": [
+        {
+            "name": "Egemen Kızılcan",
+            "email": "egemen@umomega.com",
+            "homepage": "https://umomega.com",
+            "role": "Developer / Designer"
+        }
+    ],
+    "require": {
+    	"php": "^7.3|^8.0",
+    	"laravel/framework": "^8.0"
+    },
+    "autoload": {
+    	"psr-4": {
+    		"Umomega\\Foundation\\": "src/"
+    	}
+    },
     "extra": {
         "laravel": {
             "providers": [
